feat: hot100 2rd