@@ -1,36 +1,31 @@
 package leetcode;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
- * @author jingxinwu
- * @date 2021-06-26 2:19 下午
+ * @author wujingxinit@outlook.com
+ * @date 2023/9/17 00:52
  */
 public class LeetCode78 {
 
-    List<List<Integer>> res = new LinkedList<>();
-    // 记录回溯算法的递归路径
-    LinkedList<Integer> track = new LinkedList<>();
+    List<List<Integer>> res;
 
-    // 主函数
     public List<List<Integer>> subsets(int[] nums) {
-        backtrack(nums, 0);
+        if (nums == null || nums.length == 0) {
+            return new ArrayList<>();
+        }
+        res = new ArrayList<>();
+        backtrack(nums, 0, new ArrayList<>());
         return res;
     }
 
-    // 回溯算法核心函数，遍历子集问题的回溯树
-    void backtrack(int[] nums, int start) {
-        // 前序位置，每个节点的值都是一个子集
-        res.add(new LinkedList<>(track));
-        // 回溯算法标准框架
-        for (int i = start; i < nums.length; i++) {
-            // 做选择
-            track.addLast(nums[i]);
-            // 通过 start 参数控制树枝的遍历，避免产生重复的子集
-            backtrack(nums, i + 1);
-            // 撤销选择
-            track.removeLast();
+    private void backtrack(int[] nums, int index, List<Integer> temp) {
+        res.add(new ArrayList<>(temp));
+        for (int i = index; i < nums.length; i++) {
+            temp.add(nums[i]);
+            backtrack(nums, index + 1, temp);
+            temp.remove(temp.size() - 1);
         }
     }
 }
